@@ -16,36 +16,6 @@ begin_comment
 comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
 end_comment
 
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|ArrayList
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|BitSet
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|List
-import|;
-end_import
-
 begin_comment
 comment|/**  * Class which constructs a GeoCircle representing an arbitrary circle.  *  * @lucene.experimental  */
 end_comment
@@ -85,7 +55,27 @@ name|double
 name|radius
 parameter_list|)
 block|{
-comment|// TODO: MHL for degenerate cases
+if|if
+condition|(
+name|radius
+operator|<
+name|Vector
+operator|.
+name|MINIMUM_RESOLUTION
+condition|)
+block|{
+return|return
+operator|new
+name|GeoDegeneratePoint
+argument_list|(
+name|planetModel
+argument_list|,
+name|latitude
+argument_list|,
+name|longitude
+argument_list|)
+return|;
+block|}
 return|return
 operator|new
 name|GeoStandardCircle
