@@ -29,21 +29,9 @@ extends|extends
 name|GeoPoint
 implements|implements
 name|GeoBBox
+implements|,
+name|GeoCircle
 block|{
-comment|/** The latitude of the point */
-DECL|field|latitude
-specifier|protected
-specifier|final
-name|double
-name|latitude
-decl_stmt|;
-comment|/** The longitude of the point */
-DECL|field|longitude
-specifier|protected
-specifier|final
-name|double
-name|longitude
-decl_stmt|;
 comment|/** Current planet model, since we don't extend BasePlanetObject */
 DECL|field|planetModel
 specifier|protected
@@ -91,18 +79,6 @@ operator|.
 name|planetModel
 operator|=
 name|planetModel
-expr_stmt|;
-name|this
-operator|.
-name|latitude
-operator|=
-name|lat
-expr_stmt|;
-name|this
-operator|.
-name|longitude
-operator|=
-name|lon
 expr_stmt|;
 name|this
 operator|.
@@ -391,83 +367,6 @@ return|;
 block|}
 annotation|@
 name|Override
-DECL|method|hashCode
-specifier|public
-name|int
-name|hashCode
-parameter_list|()
-block|{
-name|int
-name|result
-init|=
-name|super
-operator|.
-name|hashCode
-argument_list|()
-decl_stmt|;
-name|long
-name|temp
-init|=
-name|Double
-operator|.
-name|doubleToLongBits
-argument_list|(
-name|latitude
-argument_list|)
-decl_stmt|;
-name|result
-operator|=
-literal|31
-operator|*
-name|result
-operator|+
-call|(
-name|int
-call|)
-argument_list|(
-name|temp
-operator|^
-operator|(
-name|temp
-operator|>>>
-literal|32
-operator|)
-argument_list|)
-expr_stmt|;
-name|temp
-operator|=
-name|Double
-operator|.
-name|doubleToLongBits
-argument_list|(
-name|longitude
-argument_list|)
-expr_stmt|;
-name|result
-operator|=
-literal|31
-operator|*
-name|result
-operator|+
-call|(
-name|int
-call|)
-argument_list|(
-name|temp
-operator|^
-operator|(
-name|temp
-operator|>>>
-literal|32
-operator|)
-argument_list|)
-expr_stmt|;
-return|return
-name|result
-return|;
-block|}
-annotation|@
-name|Override
 DECL|method|toString
 specifier|public
 name|String
@@ -633,6 +532,50 @@ block|}
 comment|//System.err.println("Degenerate point "+this+" is NOT within shape "+shape);
 return|return
 name|DISJOINT
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|computeDistance
+specifier|public
+name|double
+name|computeDistance
+parameter_list|(
+specifier|final
+name|DistanceStyle
+name|distanceStyle
+parameter_list|,
+specifier|final
+name|double
+name|x
+parameter_list|,
+specifier|final
+name|double
+name|y
+parameter_list|,
+specifier|final
+name|double
+name|z
+parameter_list|)
+block|{
+if|if
+condition|(
+name|isWithin
+argument_list|(
+name|x
+argument_list|,
+name|y
+argument_list|,
+name|z
+argument_list|)
+condition|)
+return|return
+literal|0.0
+return|;
+return|return
+name|Double
+operator|.
+name|MAX_VALUE
 return|;
 block|}
 block|}
