@@ -100,8 +100,9 @@ name|gp
 decl_stmt|;
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -344,8 +345,9 @@ name|gp
 decl_stmt|;
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -569,8 +571,9 @@ name|gp
 decl_stmt|;
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -824,8 +827,9 @@ decl_stmt|;
 comment|// ...
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -940,8 +944,9 @@ expr_stmt|;
 comment|// Twelfth BKD discovered failure
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -1111,8 +1116,9 @@ expr_stmt|;
 comment|// Eleventh BKD discovered failure
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -1211,8 +1217,9 @@ expr_stmt|;
 comment|// Tenth BKD discovered failure
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -1311,8 +1318,9 @@ expr_stmt|;
 comment|// Ninth BKD discovered failure
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -1413,8 +1421,9 @@ expr_stmt|;
 comment|// Eighth BKD discovered failure
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -1512,8 +1521,9 @@ expr_stmt|;
 comment|// Seventh BKD discovered failure
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -1612,8 +1622,9 @@ expr_stmt|;
 comment|// Sixth BKD discovered failure
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -1674,8 +1685,9 @@ comment|/*     p1 = new GeoPoint(1.0010893045436076,0.007380935180644008,-0.0021
 comment|// Fifth BKD discovered failure
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -1792,8 +1804,9 @@ expr_stmt|;
 comment|// Fourth BKD discovered failure
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -1891,8 +1904,9 @@ expr_stmt|;
 comment|// Yet another test case from BKD
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -2043,8 +2057,9 @@ expr_stmt|;
 comment|// Another test case from BKD
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -2142,8 +2157,9 @@ expr_stmt|;
 comment|// Test case from BKD
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -2260,8 +2276,9 @@ expr_stmt|;
 comment|// Vertical circle cases
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -2365,8 +2382,9 @@ argument_list|)
 expr_stmt|;
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -2467,8 +2485,9 @@ argument_list|)
 expr_stmt|;
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -2570,8 +2589,9 @@ argument_list|)
 expr_stmt|;
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -2684,8 +2704,9 @@ expr_stmt|;
 comment|// Horizontal circle cases
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -2759,8 +2780,9 @@ argument_list|)
 expr_stmt|;
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -2837,8 +2859,9 @@ expr_stmt|;
 comment|// Now do a somewhat tilted plane, facing different directions.
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -2940,8 +2963,9 @@ argument_list|)
 expr_stmt|;
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -3053,8 +3077,9 @@ argument_list|)
 expr_stmt|;
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -3171,8 +3196,9 @@ argument_list|)
 expr_stmt|;
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -3293,8 +3319,9 @@ expr_stmt|;
 comment|// Slightly tilted, PI/4 direction.
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -3411,8 +3438,9 @@ argument_list|)
 expr_stmt|;
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -3532,8 +3560,9 @@ argument_list|)
 expr_stmt|;
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -3651,8 +3680,9 @@ argument_list|)
 expr_stmt|;
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
@@ -3774,8 +3804,9 @@ expr_stmt|;
 comment|// Now do a somewhat tilted plane.
 name|c
 operator|=
-operator|new
-name|GeoStandardCircle
+name|GeoCircleFactory
+operator|.
+name|makeGeoCircle
 argument_list|(
 name|PlanetModel
 operator|.
